--- a/Documentation/中文版.md
+++ b/Documentation/中文版.md
@@ -1,4 +1,4 @@
-## 在 Mac OS 上安装 SQLite
+## SQLite 安装指南
 SQLite 官方网站的[下载页面](https://sqlite.org/download.html)提供不同平台的安装包。 本文介绍关于在 Mac，Windows 和 Linux 上安装 SQLite 的指南。
 ### Mac OS
 1. 最新版本的 Mac 中都预装了 SQLite。要启动 SQLite，请在终端中执行命令 ``sqlite3``：
